--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NightShop - Your Dark Mode E-commerce</title>
+    <title>VintageCharm</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,94 +12,87 @@
             <div class="logo">Vintage Charm</div>
             <ul>
                 <li><a href="#home" class="navbar">Home</a></li>
-                <li><a href="#products" class="navbar">Products</a></li>
-                <li><a href="#about" class="navbar">About</a></li>
-                <li><a href="#contact" class="navbar">Contact</a></li>
+                <li><a href="#featured-products" class="navbar" >Products</a></li>
+                <li><a href="#hero" class="navbar">About</a></li>
+                <li><a href="#" class="navbar">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section id="hero">
-            <video src="video.mp4" autoplay muted loop></video>
-            <h1>Welcome to NightShop</h1>
-            <p>Discover the best products in dark mode</p>
-            <a href="#products" class="cta-button">Shop Now</a>
+            <video autoplay loop muted playsinline>
+                <source src="video.mp4" type="video/mp4">
+              </video>
+            <h1>Welcome to VintageCharm</h1>
+            <p>Discover the best vintage products</p>
+            <a href="#featured-products" class="cta-button">Shop Now</a>
         </section>
 
         <section id="featured-products">
             <h2>Featured Products</h2>
-            <div class="product-grid">
-                <div class="product-card">
-                    <img src="/placeholder.svg?height=200&width=200" alt="Product 1">
-                    <h3>Dark Elegance Watch</h3>
-                    <p>$199.99</p>
-                    <button>Add to Cart</button>
+            <div class="scroll-container">
+                <button class="scroll-button left">&larr;</button>
+                <div class="product-grid">
+                    <div class="product-card">
+                        <img src="./product-img/product1.avif" height="200px" width="300px" alt="Product 1">
+                        <h3>1966 Ford Mustang<br><br></h3>
+                        <p>USD 83 908</p>
+                        <a href="#contact" class="shbutton">CONTACT SELLER</a>
+                    </div>
+                    <div class="product-card">
+                        <img src="./product-img/product2.avif" height="200px" width="300px" alt="Product 2">
+                        <h3>1984 Opel Kadett<br><br></h3>
+                        <p>Price on Request</p>
+                        <a href="#contact" class="shbutton">CONTACT SELLER</a>
+                    </div>
+                    <div class="product-card">
+                        <img src="./product-img/product3.avif" height="200px" width="300px" alt="Product 3">
+                        <h3>1971 Plymouth Cuda 572</h3><br>
+                        <p>USD 251 618</p>
+                        <a href="#contact" class="shbutton">CONTACT SELLER</a>
+                    </div>
+                    <div class="product-card">
+                        <img src="./product-img/product4.avif" height="200px" width="300px" alt="Product 4">
+                        <h3>1997 Porsche Porsche 911 </h3><br>
+                        <p>USD 136 435</p>
+                        <a href="#contact" class="shbutton">CONTACT SELLER</a>
+                    </div>
+                    <div class="product-card">
+                        <img src="./product-img/product5.avif" height="200px" width="300px" alt="Product 5">
+                        <h3>2021 Maserati MC20</h3><br>
+                        <p>USD 223 439</p>
+                        <a href="#contact" class="shbutton">CONTACT SELLER</a>
+                    </div>
+                    <div class="product-card">
+                        <img src="./product-img/product6.avif" height="200px" width="300px" alt="Product 6">
+                        <h3>1962 Jaguar E-Type SI<br><br></h3>
+                        <p>Price on Request</p>
+                        <a href="#contact" class="shbutton">CONTACT SELLER</a>
+                    </div>
                 </div>
-                <div class="product-card">
-                    <img src="/placeholder.svg?height=200&width=200" alt="Product 2">
-                    <h3>Midnight Leather Bag</h3>
-                    <p>$149.99</p>
-                    <button>Add to Cart</button>
-                </div>
-                <div class="product-card">
-                    <img src="/placeholder.svg?height=200&width=200" alt="Product 3">
-                    <h3>Night Vision Sunglasses</h3>
-                    <p>$99.99</p>
-                    <button>Add to Cart</button>
-                </div>
-                <div class="product-card">
-                    <img src="/placeholder.svg?height=200&width=200" alt="Product 4">
-                    <h3>Blackout Headphones</h3>
-                    <p>$299.99</p>
-                    <button>Add to Cart</button>
-                </div>
-                <div class="product-card">
-                    <img src="/placeholder.svg?height=200&width=200" alt="Product 5">
-                    <h3>Shadow Laptop</h3>
-                    <p>$999.99</p>
-                    <button>Add to Cart</button>
-                </div>
-                <div class="product-card">
-                    <img src="/placeholder.svg?height=200&width=200" alt="Product 6">
-                    <h3>Dark Mode Phone</h3>
-                    <p>$799.99</p>
-                    <button>Add to Cart</button>
-                </div>
-                <div class="product-card">
-                    <img src="/placeholder.svg?height=200&width=200" alt="Product 7">
-                    <h3>Nightfall Tablet</h3>
-                    <p>$499.99</p>
-                    <button>Add to Cart</button>
-                </div>
-                <div class="product-card">
-                    <img src="/placeholder.svg?height=200&width=200" alt="Product 8">
-                    <h3>Blackout Speaker</h3>
-                    <p>$199.99</p>
-                    <button>Add to Cart</button>
-                </div>
+                <button class="scroll-button right">&rarr;</button>
             </div>
-            <button class="scroll-button left" onclick="scrollLeft()">&#9664;</button>
-            <button class="scroll-button right" onclick="scrollRight()">&#9654;</button>
         </section>
+        
     </main>
 
     <footer>
         <div class="footer-content">
-            <div class="footer-section">
+            <div class="footer-section" id="about">
                 <h4>About Us</h4>
-                <p>NightShop is your go-to destination for stylish dark-themed products.</p>
+                <p>Discover the best vintage cars.</p>
             </div>
             <div class="footer-section">
                 <h4>Quick Links</h4>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#products">Products</a></li>
+                    <li><a href="#hero">Home</a></li>
+                    <li><a href="#featured-products">Products</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
-            <div class="footer-section">
+            <div class="footer-section" id="contact">
                 <h4>Contact Us</h4>
                 <p>Email: vintagecharm@gmail.com</p>
                 <p>Phone: +91 990099009900</p>
