--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="product-card">
                         <img src="./product-img/product6.avif" height="200px" width="300px" alt="Product 6">
                         <h3>1962 Jaguar E-Type SI<br><br></h3>
-                        <p>Price on Request</p>
+                        <p>Price on Request.</p>
                         <a href="#contact" class="shbutton">CONTACT SELLER</a>
                     </div>
                 </div>
