--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <source src="video.mp4" type="video/mp4">
               </video>
             <h1>Welcome to VintageCharm</h1>
-            <p>Discover the best vintage products</p>
+            <p>Discover the best vintage Products[CAR}</p>
             <a href="#featured-products" class="cta-button">Shop Now</a>
         </section>
 
