--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="#home" class="navbar">Home</a></li>
                 <li><a href="#featured-products" class="navbar" >Products</a></li>
                 <li><a href="#hero" class="navbar">About</a></li>
-                <li><a href="#" class="navbar">Contact</a></li>
+                <li><a href="#contact" class="navbar">Contact</a></li>
             </ul>
         </nav>
     </header>
